# saarthi_voice_assistant

./: .gitignore  README.md  agent_checkpoint.db  agent_checkpoint.db-shm  agent_checkpoint.db-wal  agent_crew_test.py  auth_checkpoint.db  auth_checkpoint.db-shm  auth_checkpoint.db-wal  basic_graph.py  frontend.py  hack1.py  main.py  problem_statement.md  pyproject.toml  requirements.txt  test.py  test_form.html  useful_stuff.md  user_registeration_agent.py
crew/: agents.py  identity_tools_guide.md  main.py  tasks.py  tools.py
extras/: Hackatone_presentation.pptx
identity_wallet/identity_manager/: identity_manager.py
identity_wallet/models/: User.py
identity_wallet/utilities/: identity_db_manager.py  key_manager.py
saarthi_assistant/crew/: identity_tools_guide.md  tasks.py  tools.py
saarthi_assistant/frontend/: frontend.py
saarthi_assistant/identity_wallet/identity_manager/: face_recognition.py  identity_manager.py
saarthi_assistant/identity_wallet/models/: User.py
saarthi_assistant/identity_wallet/utilities/: crypto_manager.py  identity_db_manager.py
saarthi_assistant/prompt_store/: manager_system.prompt.jinja2
saarthi_assistant/sub_graphs/: agent_graph.py  auth_graph.py  authentication_graph.py  form_filler_graph.py  graph_runner.py
saarthi_assistant/utilities/: IdentityManger.py
saarthi_assistant/voice/: main.py
voice/: main.py
