[project]
name = "saarthi-voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "langchain[ollama]>=0.3.26",
    "pyttsx3>=2.99",
    "speechrecognition>=3.14.3",
    "streamlit>=1.47.0",
    "transformers>=4.53.3",
]
