[project]
name = "saarthi-voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.9.0",
    "langchain[ollama]>=0.3.26",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "transformers>=4.53.3",
    "pyttsx3>=2.99",
    "speechrecognition>=3.14.3",
    "streamlit>=1.47.0",
    "transformers>=4.53.3",
    "crewai>=0.150.0",
    "crewai-tools>=0.0.1",
    "langchain-community>=0.3.27",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "keyring>=25.6.0",
    "langgraph>=0.5.4",
    "grandalf>=0.8",
    "pyaudio>=0.2.14",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langchain-ollama>=0.3.6",
    "pycryptodome>=3.23.0",
    "ddgs>=9.4.3",
    "selenium>=4.34.2",
]
